<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="ABTest_LimitedGuestMode_Action_Close">Close</string>
    <string name="ABTest_LimitedGuestMode_Action_Ok">OK</string>
    <string name="ABTest_LimitedGuestMode_Action_SignUp">Sign Up now!</string>
    <string name="ABTest_LimitedGuestMode_Heading_DialogTitle">You are playing in guest mode</string>
    <string name="ABTest_LimitedGuestMode_Response_DaysLimit">To use all of the features available on Roblox you will need to create an account. You have %1$d days left before we require free sign up.</string>
    <string name="ABTest_LimitedGuestMode_Response_GameplaysLimit">To use all of the features available on Roblox you will need to create an account. You have %1$d gameplays left before we require free sign up.</string>
    <string name="ABTest_LimitedGuestMode_Response_LimitReached">Your trial period has ended. Please sign up to play games - it’s free!</string>
    <string name="AppRestart_SettingsChanged_Action_RestartApp">Restart app</string>
    <string name="AppRestart_SettingsChanged_Message_OutOfSync">Client and server are out of sync!</string>
    <string name="Application_AppRating_Action_RatingNegativeButton">Not now</string>
    <string name="Application_AppRating_Action_RatingRemindMeLater">Remind me later.</string>
    <string name="Application_AppRating_Label_AppRatingDialogCloseButtonText">X</string>
    <string name="Application_AppRating_Label_PleaseRate">Please rate us!</string>
    <string name="Application_AppRating_Label_RatingMessage">If you’re enjoying Roblox please rate our app.</string>
    <string name="Application_AppRating_Label_RatingYes">Yes</string>
    <string name="Application_AppRating_Response_CouldNotLaunchPlayStore">Could not launch Play Store!</string>
    <string name="Application_Leave_Action_LeaveApp">Leave App</string>
    <string name="Application_Leave_Response_LeaveAppConfirmation">Do you want to leave the app?</string>
    <string name="Application_Logout_Action_Logout">Log Out</string>
    <string name="Application_Logout_Response_LogoutConfirmation">Do you want to log out?</string>
    <string name="Application_Logout_Response_SorryLoggedOut">Sorry! You are logged out.</string>
    <string name="Application_Upgrade_Action_NotNow">Not now</string>
    <string name="Application_Upgrade_Action_Upgrade">Upgrade</string>
    <string name="Application_Upgrade_Response_Title">Roblox Upgrade</string>
    <string name="Application_Upgrade_Response_UpgradeBodyString">Your version of PEKORA is out of date and will not work properly. Taking you to the Google Play Store for an upgrade.</string>
    <string name="Authentication_2SV_Action_ResendCode">Resend Code</string>
    <string name="Authentication_2SV_Action_Verify">Verify</string>
    <string name="Authentication_2SV_Label_EnterCode">Enter Code (6-digit)</string>
    <string name="Authentication_2SV_Label_EnterEmailCode">Enter the code we just sent you via email</string>
    <string name="Authentication_2SV_Label_EnterTextCode">Enter the code we just sent you via text message</string>
    <string name="Authentication_2SV_Label_NeedHelp">Need help? Contact %1$s</string>
    <string name="Authentication_2SV_Label_TrustThisDevice">Trust this device for 30 days</string>
    <string name="Authentication_2SV_Label_TwoStepVerification">2-Step Verification</string>
    <string name="Authentication_2SV_Response_AccountIssueErrorTryAgain">Account issue. Please try again or contact Support.</string>
    <string name="Authentication_2SV_Response_CodeSent">Code Sent</string>
    <string name="Authentication_2SV_Response_FeatureNotAvailable">Feature not available. Please contact support.</string>
    <string name="Authentication_2SV_Response_InvalidCode">Invalid code</string>
    <string name="Authentication_2SV_Response_SystemErrorReturnToLogin">System error. Please return to login screen.</string>
    <string name="Authentication_2SV_Response_TooManyAttempts">Too many attempts. Please try again later.</string>
    <string name="Authentication_2SV_Response_TwoStepEmptyCode">Please enter a valid code.</string>
    <string name="Authentication_2SV_Response_UserNotFound">User not found. Please return to login screen.</string>
    <string name="Authentication_2SV_Response_VerificationDisabled">Verification disabled. Please check your settings.</string>
    <string name="Authentication_Captcha_Action_Reload">Reload</string>
    <string name="Authentication_Captcha_Action_Submit">Submit</string>
    <string name="Authentication_Captcha_Description_CaptchaHint">Type the text</string>
    <string name="Authentication_Captcha_Heading_CaptchaTitle">Please Complete Captcha Challenge</string>
    <string name="Authentication_Captcha_Label_VerifyHuman">Before you continue, we need to verify you are human. Please fill out form below.</string>
    <string name="Authentication_Captcha_Response_CaptchaFailed">Captcha Failed</string>
    <string name="Authentication_Captcha_Response_CaptchaFailedToLoad">Failed to load Captcha - please try restarting the app.</string>
    <string name="Authentication_Login_Action_ForgotPassword">Forgot password</string>
    <string name="Authentication_Login_Action_ForgotPasswordQuestion">Forgot password?</string>
    <string name="Authentication_Login_Action_Login">Login</string>
    <string name="Authentication_Login_Action_PlayNow">Play Now</string>
    <string name="Authentication_Login_Action_SignUp">Sign up</string>
    <string name="Authentication_Login_Description_CancelButtonContentDesc">loginCancelButton</string>
    <string name="Authentication_Login_Description_LoginButtonContentDesc">loginLoginButton</string>
    <string name="Authentication_Login_Description_PasswordContentDescription">loginPassword</string>
    <string name="Authentication_Login_Description_UsernameContentDescription">loginUsername</string>
    <string name="Authentication_Login_Label_LoggingIn">Logging in</string>
    <string name="Authentication_Login_Label_LoggingInSpinnerText">Logging in…</string>
    <string name="Authentication_Login_Label_Login">LOGIN</string>
    <string name="Authentication_Login_Label_NotAMember">Not a member?</string>
    <string name="Authentication_Login_Label_Username">Username</string>
    <string name="Authentication_Login_Response_AccountIssueErrorContactSupport">Account issue. Please contact Support.</string>
    <string name="Authentication_Login_Response_IncorrectPasswordTryAgain">Your password is incorrect. Please double check and try again.</string>
    <string name="Authentication_Login_Response_IncorrectUsernamePassword">Incorrect username or password.</string>
    <string name="Authentication_ResetPassword_Action_Cancel">Cancel</string>
    <string name="Authentication_ResetPassword_Action_Reset">Reset</string>
    <string name="Authentication_ResetPassword_Label_ResetPassword">Reset Password</string>
    <string name="Authentication_ResetPassword_Label_ResetPasswordMessage">Enter your username to reset password.</string>
    <string name="Authentication_ResetPassword_Label_Username">Username</string>
    <string name="Authentication_ResetPassword_Response_UsernameContainsInvalidCharacters">Username contains invalid characters.</string>
    <string name="Authentication_SignUp_Description_PasswordHintTextLong">Password (4 letters and 2 numbers min.)</string>
    <string name="Authentication_SignUp_Description_UsernameHintTextLong">Username (6-20 characters, no spaces)</string>
    <string name="Authentication_SignUp_Response_UsernameContainsInvalidCharacters">Username contains invalid characters.</string>
    <string name="CommonUI_Controls_Action_Cancel">Cancel</string>
    <string name="CommonUI_Features_Label_LegalText">"Roblox, 'Online Building Toy', characters, logos, names, and all related indicia are trademarks of Roblox Corporation ©2015. US Patents 7,874,921. Patents pending. Contact us at info@pekora.zip"</string>
    <string name="CommonUI_Features_Label_LoremIpsum">Lorem ipsum dolor</string>
    <string name="CommonUI_Features_Label_LoremIpsumXl">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="CommonUI_Message_Label_Password">Password</string>
</resources>