<?xml version="1.0" encoding="utf-8"?>
<com.roblox.client.components.RbxLinearLayout
    android:orientation="vertical"
    android:id="@id/fragment_about_background"
    android:background="@color/RbxGray3"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <View
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0.0px"
        android:layout_height="0.0px"
        android:layout_weight="0.0" />
    <View
        android:layout_width="wrap_content"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.0">
        <View
            android:layout_width="0.0dip"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />
        <LinearLayout
            android:orientation="vertical"
            android:id="@id/fragment_about_dialog_bg"
            android:background="@color/shell_dialog_background"
            android:padding="15.0dip"
            android:layout_width="800.0dip"
            android:layout_height="308.0dip">
            <ImageView
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="300.0dip"
                android:layout_height="100.0dip"
                android:src="@drawable/roblox_logo"
                android:scaleType="fitCenter"
                android:layout_weight="0.0" />
            <TextView
                android:textSize="15.0sp"
                android:textColor="@color/shell_text_normal"
                android:ellipsize="none"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/CommonUI_Features_Label_LegalText"
                android:layout_weight="0.0" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="10.0dip"
                android:layout_weight="1.0" />
            <com.roblox.client.AutoResizeTextView
                android:textSize="20.0sp"
                android:textColor="@color/shell_text_normal"
                android:ellipsize="none"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:id="@id/fragment_about_terms_privacy"
                android:layout_width="fill_parent"
                android:layout_height="25.0dip"
                android:text="@string/CommonUI_Features_Label_LoremIpsumXl"
                android:layout_weight="1.0" />
            <com.roblox.client.AutoResizeTextView
                android:textSize="20.0sp"
                android:textColor="@color/shell_text_normal"
                android:ellipsize="none"
                android:gravity="center"
                android:id="@id/fragment_about_baseURL"
                android:layout_width="fill_parent"
                android:layout_height="25.0dip"
                android:text="@string/CommonUI_Features_Label_LoremIpsumXl"
                android:layout_weight="1.0" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="10.0dip"
                android:layout_weight="1.0" />
            <com.roblox.client.AutoResizeTextView
                android:textSize="30.0sp"
                android:textColor="@color/shell_text_normal"
                android:ellipsize="none"
                android:gravity="center"
                android:id="@id/fragment_about_user_agent"
                android:layout_width="fill_parent"
                android:layout_height="30.0dip"
                android:text="@string/CommonUI_Features_Label_LoremIpsum"
                android:singleLine="true"
                android:layout_weight="0.0"
                android:textIsSelectable="true" />
        </LinearLayout>
        <View
            android:layout_width="0.0dip"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" />
</com.roblox.client.components.RbxLinearLayout>